@@ -3,6 +3,7 @@
 * Fixed shoutcast v2 metadata update
 * Better API
 * Switch to Bytes.set
+* Implement Https connection for icecast.
 
 0.3.0 (2015-07-29)
 =====
